--- a/rgbGame.HTML
+++ b/rgbGame.HTML
@@ -4,7 +4,7 @@
 
 <head>
 	<title>RGB color game</title>  
-	<link rel="stylesheet" type="text/css" href="./color.css">
+	<link rel="stylesheet" type="text/css" href="./rgbGame.css">
   
 </head>
 <body>
@@ -26,6 +26,6 @@
 		<div class="square"></div>
 	</main>
   
-	<script type="text/javascript" src="./color.js"></script>
+	<script type="text/javascript" src="./rgbGame.js"></script>
 </body>
 </html>
